welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:3: error: not found: value value
	var lookingFor:Int=value
                           ^