welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
	var nb:Int=0
	var lookingFor:Int=value
	for (i<-0 to nums.length-1) {
		if (nums(i)==lookingFor) {
			nb=nb+1
		}
	}
	return nb
}